# fleet-agent-mcp

./: .gitignore  AGENTS.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  RELEASE_TIER.md  SPEC.md  glama.json  install-service.bat  justfile  llms-full.txt  llms.txt  pyproject.toml  restart.bat  run-fleet-agent-service.bat  run_server.py  start.bat  start.ps1  stop.bat  stop.ps1  tmp_test_build.py  tmp_test_exact.py  tmp_test_seed.py
config/: voice_command_bus.yaml
docs/: INTEL_REPORTS_HUB.md  contribution-pipeline.md  coworker-plan.md  evolution.md  flowforge.md  heartbeat.md  hermes-borrowings.md  identity.md  memory.md  pulse.md  pywinauto-cua-loop.md  teleport.md
identity/: NORTH_STAR.md  SOUL.md  USER.md
mcpb/: README.md  manifest.json  pyproject.toml  run_server.py
mcpb/assets/prompts/: system.md  user.md
mcpb/src/: __init__.py  server.py  settings_store.py  voice_registry.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/resources/: .env.example
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: call_contribute.py  call_contribute2.py  check_docs.py  cua-nsis-config.json  final_verify.py  fix_commit.ps1  fix_s110.py  fix_s701.py  fritz_pipeline_test.py  health_check.py  log_discord_fix.py  log_edge_fix.py  log_s110_fix.py  pipeline_test.py  sic_fritz.py  start-intel-hub.ps1  test_codegen.py
src/fleet_agent/: acp_server.py  config.py  llm_client.py  log_store.py  server.py  settings_store.py  voice_router.py
src/fleet_agent/coworker/: __init__.py  aiwatcher_ingest.py  artifact_pack.py  board_pack.py  bootstrap.py  check_email.py  common.py  cursor_spend_watch.py  day_prep.py  devices_watch.py  docs_drift.py  fleet_pulse.py  flows.py  inbox_briefing.py  intel_briefing.py  morning_brief.py  pipeline_liveness.py  pr_poll.py  recurrence.py  seed.py  surveillance_watch.py  tasks.py  urgent_notify.py  weekly_report_pdf.py
src/fleet_agent/engine/: __init__.py  sqlite_store.py  state_machine.py  workflow_loader.py
tests/: test_acp_server.py  test_aiwatcher_ingest.py  test_artifact_pack.py  test_board_pack.py  test_coworker_recurrence.py  test_devices_watch.py  test_fleet_bridge.py  test_fleet_pulse.py  test_gate_engine.py  test_intel_briefing.py  test_intel_hub.py  test_state_machine.py  test_urgent_notify.py  test_voice_router.py  test_weekly_report_pdf.py  test_workflow_loader.py
webapp/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  vite.config.js  vite.config.ts
webapp/e2e/: fleet-audit.spec.ts
webapp/src/: App.tsx  index.css
workflows/: audit_fleet_startup.yaml  contribution.yaml  coworker.yaml  daily.yaml  gate-build-verify.json  gate-review.yaml  learning.yaml  morning_brief.yaml  security_escalation.yaml
(+52 files in other folders)
