[project]
name = "fleet-agent-mcp"
version = "0.1.0"
description = "Self-evolving AI agent — state machine, task management, knowledge accumulation, identity. Inspired by kagura-agent."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "starlette>=0.40",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/fleet_agent/mcp/tools/codegen.py" = ["E501"]
"src/fleet_agent/mcp/tools/github.py" = ["E501"]
"src/fleet_agent/server.py" = ["E501"]
"src/fleet_agent/llm_client.py" = ["E501"]
"src/fleet_agent/mcp/tools/contribute.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
